Added validators and formatters

--- a/src/views/account.pug
+++ b/src/views/account.pug
@@ -29,11 +29,11 @@ html(lang='en-US')
                         .col-12.col-md-6
                             .input-group
                                 label First Name
-                                input.form-control.mb-2(type='text' name='fname' required)
+                                input.form-control.mb-2(type='text' name='fname' data-validate required)
                         .col-12.col-md-6
                             .input-group
                                 label Last Name
-                                input.form-control.mb-2(type='text' name='lname' required)
+                                input.form-control.mb-2(type='text' name='lname' data-validate required)
                         .col-12
                             .input-group
                                 label Email
