--- a/src/views/components/dashboard/personal-info.pug
+++ b/src/views/components/dashboard/personal-info.pug
@@ -2,7 +2,8 @@ mixin personal-info-card(account)
     .card.w-100.mb-4
         .card-body
             h4.card-title.text-center
-                ion-icon.text-primary.mr-4(name='finger-print-outline')
+                ion-icon.text-primary(name='finger-print-outline')
+                br
                 | Personal Information
             form(action='/app/account/update' method='POST')
                 .row
