--- a/src/public/stylesheets/resumes/budgie-blue.css
+++ b/src/public/stylesheets/resumes/budgie-blue.css
@@ -6,7 +6,6 @@
 
 * {
     font-family: "Avenir Next";
-    font-weight: normal;
 }
 
 html,
@@ -19,18 +18,22 @@ body {
     width: 8.5in;
     height: 11in;
     border: 1px solid gray;
+    background: var(--light-blue);
+    padding: 0.1in;
+    box-sizing: border-box;
 }
 
 h1 {
-    margin: 0;
     text-align: center;
-    padding-top: 0.5in;
-    font-size: 48pt;
+    font-size: 36pt;
     color: var(--blue);
+    font-weight: lighter;
+    margin: 0;
 }
 
 h4 {
     margin: 0;
+    color: var(--dark-blue);
 }
 
 #contact {
@@ -86,15 +89,16 @@ td {
 }
 
 h3 {
-    color: var(--blue);
-}
-
-h4 {
-    color: var(--dark-blue);
+    color: black;
+    font-size: 10pt;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 0;
 }
 
 p {
     font-size: 10pt;
+    margin: 0;
 }
 
 .mb-12 {
@@ -111,4 +115,38 @@ p {
 
 .text-dark-blue {
     color: var(--dark-blue)
+}
+
+#white-box {
+    background: white;
+    width: 67%;
+    height: 100%;
+    float: right;
+    padding: 0.25in;
+    box-sizing: border-box;
+}
+
+#main-section {
+    margin-top: 0.5in;
+}
+
+h2 {
+    color: var(--blue);
+    margin-bottom: 1pt;
+    font-weight: 400;
+    font-size: 12pt;
+    text-transform: uppercase;
+}
+
+.blue-bar {
+    height: 2.5pt;
+    width: 0.5in;
+    background: var(--blue);
+}
+
+h3 small {
+    font-weight: inherit;
+    font-size: inherit;
+    color: gray;
+    float: right;
 }
