--- a/src/views/resume-templates/budgie-blue.pug
+++ b/src/views/resume-templates/budgie-blue.pug
@@ -14,7 +14,11 @@ mixin education(edu)
         small= `${edu.end.split("/")[2]}`
     p= `${edu.level} // ${edu.degree}`
     p= edu.description
-    
+
+mixin certification(cert)
+    h3= cert.name
+        small= ` at ${cert.institution}`
+
 
 html(lang='en-US')
     head
@@ -27,13 +31,25 @@ html(lang='en-US')
                 #main-section
                     +section-title('Objective')
                     p(style='margin-top:5pt') Your objective will appear here
-                    +section-title('Work Experience')
-                    each experience in workExperience
-                        +work-experience(experience)
-                    +section-title('Education')
-                    each education in educationHistory
-                        +education(education)
-            
-
+                    if workExperience.length > 0
+                        +section-title('Work Experience')
+                        each experience in workExperience
+                            +work-experience(experience)
+                    if educationHistory.length > 0
+                        +section-title('Education')
+                        each education in educationHistory
+                            +education(education)
+                    if certifications.length > 0
+                        +section-title('Certifications')
+                        each certification in certifications
+                            +certification(certification)
+                    if skillset.length > 0
+                        +section-title('Skills')
+                        p
+                            each skill, n in skillset
+                                if n < skillset.length - 1
+                                    = `${skill.name}, `
+                                else
+                                    = skill.name
 
         script(src='https://unpkg.com/ionicons@5.1.2/dist/ionicons.js')
