--- a/src/views/components/dashboard/education.pug
+++ b/src/views/components/dashboard/education.pug
@@ -1,5 +1,5 @@
 mixin education-card(educationHistory)
-    .card.w-100.mb-4
+    #education-card.card.w-100.mb-4
         .card-body
             h4.card-title.text-center
                 ion-icon.text-primary(name='school-outline')
