--- a/src/views/components/dashboard/personal-info.pug
+++ b/src/views/components/dashboard/personal-info.pug
@@ -1,5 +1,5 @@
 mixin personal-info-card(account)
-    .card.w-100.mb-4
+    #personal-info-card.card.w-100.mb-4
         .card-body
             h4.card-title.text-center
                 ion-icon.text-primary(name='finger-print-outline')
