--- a/src/views/components/dashboard/skillset.pug
+++ b/src/views/components/dashboard/skillset.pug
@@ -1,5 +1,5 @@
 mixin skills-card(skillset)
-    .card.w-100.mb-4
+    #skills-card.card.w-100.mb-4
         .card-body
             h4.card-title.text-center
                 ion-icon.text-primary(name='checkmark-done-outline')
