--- a/src/views/components/dashboard/work-experience.pug
+++ b/src/views/components/dashboard/work-experience.pug
@@ -1,5 +1,5 @@
 mixin work-experience-card(experiences)
-    .card.w-100.mb-4
+    #work-experience-card.card.w-100.mb-4
         .card-body
             h4.card-title.text-center
                 ion-icon.text-primary(name='briefcase-outline')
