Reconfigured errors views

--- a/src/views/errors/GenericError.pug
+++ b/src/views/errors/GenericError.pug
@@ -3,7 +3,7 @@ doctype html
 html(lang='en-US')
     head
         - nav = error
-        include components/head
+        include ../components/head
     body
         div.w-100.p-4(style='height:100vh')
             div.w-100.h-100.p-4.bg-light(style='border-radius:30px')
@@ -11,4 +11,4 @@ html(lang='en-US')
 
                 p= message
 
-        include components/scripts
+        include ../components/scripts
