Bug Fix: Fixed validation for WorkExperience

--- a/src/views/components/dashboard/work-experience.pug
+++ b/src/views/components/dashboard/work-experience.pug
@@ -39,10 +39,10 @@ mixin add-work-experience-modal
                         .row
                             .col-12.col-md-6
                                 label Start
-                                input.form-control.mb-2(name='start-date' placeholder='mm/dd/yyyy' data-type='date' required)
+                                input.form-control.mb-2(name='start-date' placeholder='mm/yyyy' data-type='mmyyyy' required)
                             .col-12.col-md-6
                                 label End
-                                input.form-control.mb-2(name='end-date' placeholder='mm/dd/yyyy' data-type='date' required)
+                                input.form-control.mb-2(name='end-date' placeholder='mm/yyyy' data-type='mmyyyy' required)
                         .row
                             .col-12
                                 label Description
