--- a/src/views/components/dashboard/education.pug
+++ b/src/views/components/dashboard/education.pug
@@ -37,10 +37,10 @@ mixin add-education-modal
                         .row
                             .col-12.col-md-6
                                 label Start
-                                input.form-control.mb-2(name='start-date' placeholder='mm/dd/yyyy' data-type='date' data-validate data-format)
+                                input.form-control.mb-2(name='start-date' placeholder='mm/yyyy' data-type='mmyyyy' data-validate data-format)
                             .col-12.col-md-6
                                 label End
-                                input.form-control.mb-2(name='end-date' placeholder='mm/dd/yyyy' data-type='date' data-format required)
+                                input.form-control.mb-2(name='end-date' placeholder='mm/yyyy' data-type='mmyyyy' data-format required)
                         .row
                             .col-12.col-md-8
                                 label Degree/Program
@@ -80,10 +80,10 @@ mixin edit-education-modal(edu)
                         .row
                             .col-12.col-md-6
                                 label Start
-                                input.form-control.mb-2(name='start-date' value=edu.start placeholder='mm/dd/yyyy' data-type='date')
+                                input.form-control.mb-2(name='start-date' value=edu.start placeholder='mm/yyyy' data-type='mmyyyy')
                             .col-12.col-md-6
                                 label End
-                                input.form-control.mb-2(name='end-date' value=edu.end placeholder='mm/dd/yyyy' data-type='date' required)
+                                input.form-control.mb-2(name='end-date' value=edu.end placeholder='mm/yyyy' data-type='mmyyyy' required)
                         .row
                             .col-12.col-md-8
                                 label Degree/Program
