--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400&display=swap");
 
+*::selection {
+    background: var(--bs-teal);
+}
+
 html,
 body {
     padding: 0;
