--- a/src/views/components/dashboard/certifications.pug
+++ b/src/views/components/dashboard/certifications.pug
@@ -32,7 +32,7 @@ mixin add-certification-modal
                                 input.form-control.mb-2(name='institution' data-validate required)
                             .col-12.col-md-4
                                 label Exam Date
-                                input.form-control.mb-2(name='exam-date' placeholder='mm/yyyy' data-type='mm/yyyy' required)
+                                input.form-control.mb-2(name='exam-date' placeholder='mm/yyyy' data-type='mmyyyy' required)
                         .row
                             .col-12
                                 label Certification
