Fixed incorrect labels

--- a/src/views/components/dashboard/certifications.pug
+++ b/src/views/components/dashboard/certifications.pug
@@ -45,7 +45,7 @@ mixin add-certification-modal
                         button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary.btn-sm(type='submit') Save
+                        button.btn.btn-primary.btn-sm(type='submit') Add
 
 mixin edit-certification-modal(certification)
     .modal.fade(tabindex='1' id=`edit-certification-modal-${certification._id}`)
@@ -81,4 +81,4 @@ mixin edit-certification-modal(certification)
                         button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary.btn-sm(type='submit') Save
+                        button.btn.btn-primary.btn-sm(type='submit') Update
