--- a/src/views/components/dashboard/work-experience.pug
+++ b/src/views/components/dashboard/work-experience.pug
@@ -51,7 +51,7 @@ mixin add-work-experience-modal
                         button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary.btn-sm(type='submit') Save
+                        button.btn.btn-primary.btn-sm(type='submit') Add
 
 mixin edit-work-experience-modal(experience)
     .modal.fade(
@@ -94,4 +94,4 @@ mixin edit-work-experience-modal(experience)
                         button.btn.btn-secondary.btn-sm(
                             type='button'
                             data-dismiss='modal') Close
-                        button.btn.btn-primary.btn-sm(type='submit') Save
+                        button.btn.btn-primary.btn-sm(type='submit') Update
