--- a/src/views/components/dashboard/skillset.pug
+++ b/src/views/components/dashboard/skillset.pug
@@ -32,7 +32,7 @@ mixin add-skill-modal
             .modal-content
                 form(action='/app/skills/add' method='POST')
                     .modal-header
-                        h5.modal-title Add Education
+                        h5.modal-title Add Skill
                         button.close(type='button' data-dismiss='modal')
                             span &times;
                     .modal-body
@@ -60,7 +60,7 @@ mixin edit-skill-modal(skill)
                 form(action='/app/skills/update' method='POST')
                     input(name='_id' value=skill._id hidden)
                     .modal-header
-                        h5.modal-title Add Education
+                        h5.modal-title Edit Education
                         button.close(type='button' data-dismiss='modal')
                             span &times;
                     .modal-body
