--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -3,6 +3,7 @@ include components/dashboard/education
 include components/dashboard/personal-info
 include components/dashboard/skillset
 include components/dashboard/certifications
+include components/dashboard/goals
 
 doctype html
 
@@ -38,6 +39,7 @@ html(lang='en-US')
                     +personal-info-card(account)
                     +skills-card(skillset)
                 .col-12.col-md-6
+                    +goals-card()
                     +education-card(educationHistory)
                     +work-experience-card(workExperience)
                     +certifications-card(certifications)
