New Feature: Goals

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -27,18 +27,18 @@ label {
     height: 100vh;
 }
 
-input.pop-input {
+.pop-input {
     border: none;
     padding: 0;
     transition: 0.25s padding;
 }
 
-input.pop-input:placeholder-shown {
+.pop-input:placeholder-shown {
     background: var(--bs-light);
 }
 
-input.pop-input:active,
-input.pop-input:focus {
+.pop-input:active,
+.pop-input:focus {
     padding: 0.375rem 0.75rem;
 }
 
