--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -39,7 +39,7 @@ html(lang='en-US')
                     +personal-info-card(account)
                     +skills-card(skillset)
                 .col-12.col-md-6
-                    +goals-card()
+                    +goals-card(account)
                     +education-card(educationHistory)
                     +work-experience-card(workExperience)
                     +certifications-card(certifications)
